Opened 9 years ago
Closed 9 years ago
#12566 closed bug (fixed)
PowerStatus icon no longer has transparent background
Reported by: | markh | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/PowerStatus | Version: | R1/Development |
Keywords: | Cc: | looncraz | |
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
Attachments (4)
Change History (11)
by , 9 years ago
Attachment: | battery_icon.png added |
---|
comment:1 by , 9 years ago
Component: | User Interface → Applications/PowerStatus |
---|---|
Milestone: | R1/beta1 → R1 |
Owner: | changed from | to
Platform: | x86 → All |
Summary: | Battery status icon no longer has transparent background → PowerStatus icon no longer has transparent background |
comment:2 by , 9 years ago
Cc: | added |
---|---|
Description: | modified (diff) |
comment:3 by , 9 years ago
by , 9 years ago
Attachment: | PowerStatus-bg.patch added |
---|
comment:4 by , 9 years ago
patch: | 0 → 1 |
---|
by , 9 years ago
Attachment: | Bitmap Clip.png added |
---|
by , 9 years ago
Attachment: | Bitmap Clip 2.png added |
---|
follow-up: 6 comment:5 by , 9 years ago
Bitmap Clip.png shows another minor bug I need to investigate and deserves its own ticket.
comment:6 by , 9 years ago
Replying to looncraz:
Bitmap Clip.png shows another minor bug I need to investigate and deserves its own ticket.
I created a ticket for this - and a patch:
Note:
See TracTickets
for help on using tickets.
Fixed.
Simply didn't adopt the tint value for the low color.
http://files.looncraz.net/svc/PowerStatus-bg.patch