PowerStatus background tint

Recent changes require us to adopt the tint value for PowerStatus's
low color as well as the ViewUIColor.

This repairs the issue where the replicant's background color was lighter
than the Deskbar's tray color.

Fixes #12566.

Signed-off-by: Jessica Hamilton <jessica.l.hamilton@gmail.com>